--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           >
             <i class="fas fa-bars"></i>
           </button>
-          <div class="nav-menu" aria-label="closed-menu">
+          <div class="nav-menu">
             <ul>
               <li><a class="nav-menu-item" href="#">Home</a></li>
               <li><a class="nav-menu-item" href="#">Categorias</a></li>
