--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
     </footer>
     <!-- fin del footer -->
-
+    <div class="add-modal"></div>
     <script src="index.js"></script>
   </body>
 </html>
